# robinhood-ai-quant

./: .env.example  .gitignore  INSTALL.txt  PHASE1_MANIFEST.json  PHASE2_MANIFEST.json  PHASE3_MANIFEST.json  PHASE45_MANIFEST.json  PHASE4_MANIFEST.json  PHASE5A_MANIFEST.json  PHASE5_INSTALL.txt  PHASE5_MANIFEST.json  PHASE6_9_INSTALL.txt  PHASE6_9_MANIFEST.json  PHASE6_INSTALL.txt  PHASE7_10_INSTALL.txt  PHASE7_10_MANIFEST.json  PHASE7_INSTALL.txt  PHASE7_MANIFEST.json  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: assets.yaml  backtest.yaml  crypto_strategy.yaml  data_sources.yaml  environments.yaml  phase5.yaml  phase7.yaml  portfolio.yaml  research.yaml  risk_limits.yaml  stock_strategy.yaml
docs/: PHASE2_MARKET_DATA.md  PHASE3_BACKTESTING.md  PHASE45_PLATFORM_ARCHITECTURE.md  PHASE4_PORTFOLIO_RESEARCH.md  PHASE5A_OPTIMIZATION.md  PHASE5_RESEARCH_VALIDATION.md  PHASE6.md  PHASE6_9.md  PHASE7_10_PROMOTION_ENGINE.md  PHASE7_TOURNAMENT_SELECTION.md  PROJECT_CHARTER.md  RISK_POLICY.md  SECURITY.md  SUCCESS_CRITERIA.md
scripts/: download_research_history.py  phase2_smoke_test.ps1  phase3_smoke_test.ps1  phase3_smoke_test.sh  phase45_smoke_test.ps1  phase45_smoke_test.sh  phase4_smoke_test.ps1  phase4_smoke_test.sh  phase5_bundle.py  phase5_smoke_test.ps1  phase5_smoke_test.sh  phase5a_smoke_test.ps1  phase5a_smoke_test.sh  phase6_bundle.py  phase6_smoke_test.ps1  phase7_bundle.py  phase7_smoke_test.ps1  phase7_smoke_test.sh  run_checks.ps1  run_checks.sh  setup.ps1  setup.sh
src/: main.py
src/analytics/: __init__.py  performance.py
src/backtest/: __init__.py  engine.py  models.py
src/common/: config.py  exceptions.py  health.py  logging_config.py
src/core/: __init__.py  bootstrap.py  context.py  discovery.py  events.py  metrics.py  plugins.py  services.py
src/data/: __init__.py  catalog.py  demo.py  quality.py  schema.py  service.py  storage.py
src/execution/: broker.py
src/portfolio/: __init__.py  allocation.py  engine.py  models.py
src/reporting/: __init__.py  backtest_report.py  portfolio_report.py
src/research/: __init__.py  benchmark.py  engine.py  models.py  objectives.py  phase5.py  report.py  scorecard.py  search.py  stability.py  strategy_portfolio.py  tournament.py  validation.py  walk_forward.py
src/strategies/: __init__.py  atr_breakout.py  base.py  bollinger.py  donchian.py  ensemble.py  indicators.py  moving_average.py  registry.py  rsi.py  turtle.py
tests/integration/: test_backtest_cli.py  test_cli.py  test_data_cli.py  test_optimization_cli.py  test_plugin_cli.py  test_portfolio_cli.py
tests/unit/: test_backtest.py  test_coingecko.py  test_config.py  test_data_quality.py  test_data_schema.py  test_discovery.py  test_events.py  test_health.py  test_indicators.py  test_phase6_strategies.py  (+13 more)
(+20 files in other folders)
