[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robinhood-ai-quant"
version = "0.3.0"
description = "Broker-independent AI-assisted quantitative research platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "matplotlib>=3.9,<4",
  "pandas>=2.2,<3",
  "pyarrow>=16,<22",
  "PyYAML>=6.0.1,<7",
  "python-dotenv>=1.0.1,<2",
  "requests>=2.32,<3",
  "scipy>=1.13,<2",
  "yfinance>=0.2.54,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
  "pandas-stubs>=2.2",
  "types-PyYAML>=6.0.12",
  "types-requests>=2.32",
]

[project.scripts]
quant-platform = "src.main:main"

[tool.setuptools]
packages = [
  "src",
  "src.ai",
  "src.analytics",
  "src.backtest",
  "src.common",
  "src.data",
  "src.data.providers",
  "src.execution",
  "src.monitoring",
  "src.portfolio",
  "src.reporting",
  "src.risk",
  "src.strategies",
  "src.tax",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --disable-warnings --maxfail=1"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "venv", "data", "logs", "reports"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [
  "^tests/",
  "^\\.venv/",
  "^venv/",
  "^build/",
  "^dist/",
]
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["yfinance", "yfinance.*"]
ignore_missing_imports = true
